--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,26 @@ My React Tutorials Learnings and notes
 First/monsters-rolodex/node_modules
 First/some basic with rejected files included/node_modules
 
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
