--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 My React Tutorials Learnings and notes
 
 # Ignore node_modules directory
-First/monsters-rolodex/node_modules
-First/some basic with rejected files included/node_modules
+monsters-rolodex/node_modules
+some basic with rejected files included/node_modules
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
